# skill-a-thon-resume-analyzer

./: HOW_TO_USE.md  QUICK_START.md  README.md  agent.py  demo.py  pyproject.toml  resume.md  server.py
docs/: API.md  FLOW.md
references/: README.md
skills/: __init__.py  analyze_resume.py  enrich_company.py  parse_resume.py  summarize_candidate.py
ui/: index.html
