[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-a-thon-resume-analyzer"
version = "1.0.0"
description = "Hackathon-friendly AI resume analyzer built from small reusable skills, powered by local Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mauro Gioberti", email = "maurogioberti@users.noreply.github.com"},
]
keywords = ["resume", "ai", "skills", "ollama", "hackathon"]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/maurogioberti/skill-a-thon-resume-analyzer"
Repository = "https://github.com/maurogioberti/skill-a-thon-resume-analyzer"

[project.scripts]
resume-analyzer = "demo:main"

[tool.setuptools.packages.find]
include = ["skills*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.md"]
